Prevent installation errors

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,9 @@ sane-backends (1.0.24-14) UNRELEASED; urgency=medium
   * debian/control:
     - To prevent error messages at startup disable snmp through
       remove libsnmp-dev from Build-Depends (Closes: #787567).
+  * To prevent installation errors (Closes: #786923):
+    - Remove debian/libsane-dev.links
+    - New libsane-dev.NEWS.
 
  -- Jörg Frings-Fürst <debian@jff-webhosting.net>  Sun, 28 Jun 2015 10:12:36 +0200
 
