--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-sane-backends (1.0.24-14) UNRELEASED; urgency=medium
+sane-backends (1.0.24-14) unstable; urgency=medium
 
   * debian/TROUBLESHOOTING.Debian:
     - Add section if device file system does not support ACLs
@@ -8,15 +8,18 @@ sane-backends (1.0.24-14) UNRELEASED; urgency=medium
       remove libsnmp-dev from Build-Depends (Closes: #787567).
   * debian/sane-utils.lintian-overrides:
     - Add maintainer-script-should-not-use-adduser-system-without-home.
-  * Architecture dependent binaries(Closes: #786923):
+  * Architecture dependent binaries (Closes: #786923):
     - debian/control:
       + New package libsane-bin:
         Move architecture-dependent binaries from libsane-dev to libsane-bin.
     - debian/rules:
-      + Delete command to move sane-config to 
+      + Delete command to move sane-config to
         sane-config.${DEB_HOST_MULTIARCH}.
+    - New debian/libsane-dev.preinst:
+      + Remove sane-config.*.
+      + Remove link to sane-config.
 
- -- Jörg Frings-Fürst <debian@jff-webhosting.net>  Sun, 28 Jun 2015 10:12:36 +0200
+ -- Jörg Frings-Fürst <debian@jff-webhosting.net>  Sun, 30 Aug 2015 18:57:06 +0200
 
 sane-backends (1.0.24-13) unstable; urgency=medium
 
