--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+sane-backends (1.0.24-8+deb8u1) stable; urgency=medium
+
+  * Cherry-picked systemd handling from unstable (Closes: #791961):
+    - Rewrite debian/saned@.service to prevent errors by network scaning.
+    - New debian/sane-utils.links:
+      + Add a link from /dev/null to /lib/systemd/system/saned.service
+        to prevent start via fallback script /etc/init.d/saned.
+    - Add 2015 to debian/copyright.
+
+ -- Jörg Frings-Fürst <debian@jff-webhosting.net>  Wed, 02 Sep 2015 14:10:00 +0200
+
 sane-backends (1.0.24-8) unstable; urgency=medium
 
   * New debian/patches/0100-usb3-corrections.patch:
