--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+sane-backends (1.0.25-1) UNRELEASED; urgency=medium
+
+  * New upstream release.
+
+ -- Jörg Frings-Fürst <debian@jff-webhosting.net>  Thu, 08 Oct 2015 12:34:57 +0200
+
 sane-backends (1.0.24-14) unstable; urgency=medium
 
   * debian/TROUBLESHOOTING.Debian:
