--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
 sane-backends (1.0.25-1) unstable; urgency=medium
 
-  * New upstream release.
+  * New upstream release (Closes: #740256, #803535).
   * Refresh patches:
     - debian/patches/0005-mk_reproducible_results.patch
     - debian/patches/001-scanimage_manpage.patch
@@ -24,8 +24,13 @@ sane-backends (1.0.25-1) unstable; urgency=medium
     - debian/patches/0500-systemd_configure.patch
     - debian/patches/0100-usb3-corrections.patch
   * Remove obsolete lintian-overrides.
+  * Rename and reorder patches.
+  * New debian/patches/0100-source_spelling.patch:
+    - Correct tyypo at backend/hp-scl.c
+  * debian/rules:
+    - Remove Parameter -c0 from dh_makeshlibs call.
 
- -- Jörg Frings-Fürst <debian@jff-webhosting.net>  Thu, 08 Oct 2015 12:34:57 +0200
+ -- Jörg Frings-Fürst <debian@jff-webhosting.net>  Sun, 01 Nov 2015 15:39:32 +0100
 
 sane-backends (1.0.24-14) unstable; urgency=medium
 
