--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-sane-backends (1.0.25+git20150927-2) UNRELEASED; urgency=medium
+sane-backends (1.0.26~git20151121-1) experimental; urgency=medium
 
-  * debian/libsane.preinst: 
-    - Correct typo (Closes: #800507).
+  * Build from daily snapshot sane-backends-git20151121.tar.gz.
+  * Refresh patches.
 
- -- Jörg Frings-Fürst <debian@jff-webhosting.net>  Wed, 30 Sep 2015 21:56:47 +0200
+ -- Jörg Frings-Fürst <debian@jff-webhosting.net>  Sun, 22 Nov 2015 15:47:34 +0100
 
 sane-backends (1.0.25+git20150927-1) experimental; urgency=medium
 
