--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+sane-backends (1.0.25-3) UNRELEASED; urgency=low
+
+  * New debian/patches/0130-usb-timeout.patch:
+    - Add a timeout to prevent "Resource temporarily unavailable" error
+      (Closes: #810919).
+      Thanks to Steve Graham <bugs@annaghvarn.plus.com>.
+
+ -- Jörg Frings-Fürst <debian@jff-webhosting.net>  Sat, 16 Jan 2016 21:30:19 +0100
+
 sane-backends (1.0.25-2) unstable; urgency=medium
 
   * Undelete, refresh and rename debian/patches/
