--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,8 @@ sane-backends (1.0.25-3) UNRELEASED; urgency=low
       Thanks to Steve Graham <bugs@annaghvarn.plus.com>.
   * debian/rules: Split rules into *-arch and *-indep to
     prevent build errors (Closes: #806104).
+  * debian/watch:
+    - bump version to 4 (no changes required).
 
  -- Jörg Frings-Fürst <debian@jff-webhosting.net>  Sat, 16 Jan 2016 21:30:19 +0100
 
