--- a/debian/changelog
+++ b/debian/changelog
@@ -7,13 +7,15 @@ sane-backends (1.0.25-3) UNRELEASED; urgency=low
   * debian/rules:
     - Split rules into *-arch and *-indep to prevent build errors
       (Closes: #806104).
-    - To prevent lintian errors move Empty dependency_libs in all .la
-      files to override_dh_makeshlibs-arch.
+    - To prevent lintian errors move "empty dependency_libs in all .la
+      files" to override_dh_makeshlibs-arch.
   * debian/watch:
     - bump version to 4 (no changes required).
   * debian/control:
     - Bump Standards-Version to 3.9.8 (no changes required).
     - Change Vcs-* to secure uri.
+  * New libsane-bin.lintian-overrides to override false lintian error
+    messages.
 
  -- Jörg Frings-Fürst <debian@jff-webhosting.net>  Sat, 16 Jan 2016 21:30:19 +0100
 
