--- a/debian/changelog
+++ b/debian/changelog
@@ -15,7 +15,10 @@ sane-backends (1.0.25-3) UNRELEASED; urgency=low
     - Bump Standards-Version to 3.9.8 (no changes required).
     - Change Vcs-* to secure uri.
   * New libsane-bin.lintian-overrides to override false lintian error
-    messages.
+    messages
+  * Refresh and correct new typos:
+    - debian/patches/0100-source_spelling.patch
+    - debian/patches/0605-man_typo.patch.
 
  -- Jörg Frings-Fürst <debian@jff-webhosting.net>  Sat, 16 Jan 2016 21:30:19 +0100
 
