--- a/debian/changelog
+++ b/debian/changelog
@@ -20,6 +20,7 @@ sane-backends (1.0.25-3) UNRELEASED; urgency=low
     - debian/patches/0100-source_spelling.patch
     - debian/patches/0605-man_typo.patch.
   * Add year 2016 to debian/* at debian/copyright.
+  * New debian/libsane-dev.dirs to prevent build errors.
 
  -- Jörg Frings-Fürst <debian@jff-webhosting.net>  Sat, 16 Jan 2016 21:30:19 +0100
 
