Rewrite changelog and add comment

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,27 +1,29 @@
 sane-backends (1.0.25-3) unstable; urgency=low
 
   * New debian/patches/0130-usb-timeout.patch:
-    - Add a timeout to prevent "Resource temporarily unavailable" error
-      (Closes: #810919).
+    - For the "Resource temporarily unavailable" error add a timeout to
+      function libusb_bulk_write (Closes: #810919).
       Thanks to Steve Graham <bugs@annaghvarn.plus.com>.
   * debian/rules:
-    - Split rules into *-arch and *-indep to prevent build errors
-      (Closes: #806104).
-    - To prevent lintian errors move "empty dependency_libs in all .la
-      files" to override_dh_makeshlibs-arch.
-    - Move docu install for libsane-dev to override_dh_installdocs-arch.
-  * debian/watch:
-    - bump version to 4 (no changes required).
-  * debian/control:
-    - Bump Standards-Version to 3.9.8 (no changes required).
-    - Change Vcs-* to secure uri.
-  * New libsane-bin.lintian-overrides to override false lintian error
-    messages
+    - For FTBFS on built with dpkg-buildpackage -A (Closes: #806104):
+      + Split rules into *-arch and *-indep.
+      + Move "empty dependency_libs in all .la files" to 
+        override_dh_makeshlibs-arch.
+      + Move documentation install for libsane-dev to
+        override_dh_installdocs-arch.
+      + New debian/libsane-dev.dirs.
+  * New libsane-bin.lintian-overrides:
+    - Override lintian error old-style-config-script-multiarch-path
+      (See bug #820964).
   * Refresh and correct new typos:
     - debian/patches/0100-source_spelling.patch
     - debian/patches/0605-man_typo.patch.
+  * debian/watch:
+    - Bump version to 4 (no changes required).
+  * debian/control:
+    - Bump Standards-Version to 3.9.8 (no changes required).
+    - Change Vcs-* to secure uri.
   * Add year 2016 to debian/* at debian/copyright.
-  * New debian/libsane-dev.dirs to prevent build errors.
 
  -- Jörg Frings-Fürst <debian@jff-webhosting.net>  Thu, 14 Apr 2016 22:54:23 +0200
 
