Add requested lsb-base on sane-utils Depends

--- a/debian/changelog
+++ b/debian/changelog
@@ -21,6 +21,7 @@ sane-backends (1.0.25-3) unstable; urgency=medium
   * debian/control:
     - Bump Standards-Version to 3.9.8 (no changes required).
     - Change Vcs-Browser to secure uri.
+    - Add requested lsb-base on sane-utils Depends to prevent lintian error.
   * Add year 2016 to debian/* at debian/copyright.
   * New debian/patches/0135-saned-remotescanners.patch to report
     network-attached devices (Closes: #821255).
@@ -30,7 +31,7 @@ sane-backends (1.0.25-3) unstable; urgency=medium
     Thanks to Chris Lamb <lamby@debian.org>.
   * Remove unused lintian overrides.
 
- -- Jörg Frings-Fürst <debian@jff-webhosting.net>  Mon, 22 Aug 2016 04:51:15 +0200
+ -- Jörg Frings-Fürst <debian@jff-webhosting.net>  Fri, 14 Oct 2016 09:07:30 +0200
 
 sane-backends (1.0.25-2) unstable; urgency=medium
 
