--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 sane-backends (1.0.25-4) UNRELEASED; urgency=medium
 
   * Remove outdated debian/libsane-dev.NEWS (Closes: #852842).
+  * debian/rules:
+    - Remove DVIPSSource from sane.ps to make build reproducible.
 
  -- Jörg Frings-Fürst <debian@jff-webhosting.net>  Fri, 27 Jan 2017 22:09:18 +0100
 
