--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+sane-backends (1.0.27-1~experimental2) UNRELEASED; urgency=medium
+
+  * debian/rules:
+    - Rename libsane.udev to libsane1.udev to get missing 
+      60-libsane1.rules.
+
+ -- Jörg Frings-Fürst <debian@jff-webhosting.net>  Sat, 15 Jul 2017 11:31:34 +0200
+
 sane-backends (1.0.27-1~experimental1) experimental; urgency=medium
 
   * New upstream release
