--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,10 @@
 sane-backends (1.0.27-1~experimental2) UNRELEASED; urgency=medium
 
   * debian/rules:
-    - Rename libsane.udev to libsane1.udev to get missing 
-      60-libsane1.rules.
+    - Rename libsane.udev to libsane1.udev to get missing
+      60-libsane1.rules (Closes: #868312).
+  * Replace libsane.udev with libsane1.udev at TROUBLESHOOTING.Debian
+    and libsane1.README.Debian.
 
  -- Jörg Frings-Fürst <debian@jff-webhosting.net>  Sat, 15 Jul 2017 11:31:34 +0200
 
