--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,8 @@ sane-backends (1.0.27-1~experimental2) UNRELEASED; urgency=medium
     and libsane1.README.Debian.
   * debian/control:
     + Add Breaks and Replaces to the package libsane1 (Closes: #868308).
+    + Remove outdated Recommends libsane-extras from libsane1
+      (Closes: #868265).
 
  -- Jörg Frings-Fürst <debian@jff-webhosting.net>  Sat, 15 Jul 2017 11:31:34 +0200
 
