--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,8 @@ sane-backends (1.0.27-1~experimental2) UNRELEASED; urgency=medium
     + Add Breaks and Replaces to the package libsane1 (Closes: #868308).
     + Remove outdated Recommends libsane-extras from libsane1
       (Closes: #868265).
+  * debian/sane-utils.postrm:
+    + Reenable set -e and masquerade update-inetd calls with "|| true".
 
  -- Jörg Frings-Fürst <debian@jff-webhosting.net>  Sat, 15 Jul 2017 11:31:34 +0200
 
