--- a/debian/changelog
+++ b/debian/changelog
@@ -15,6 +15,11 @@ sane-backends (1.0.27-1~experimental2) UNRELEASED; urgency=medium
   * Use the hwdb+udev format (Closes: #869244):
     - debian/rules: Change override_dh_installudev-arch.
     - New file libsane1.dirs for /lib/udev/hwdb.d/.
+  * Drop both dh-autoreconf/dh-systemd from both build-depends
+    and dh --with arguments because this is all defaults when
+    using dh compat 10.
+  * Drop --parallel from dh because this is default when using
+    dh compat 10.
 
  -- Jörg Frings-Fürst <debian@jff-webhosting.net>  Sat, 15 Jul 2017 11:31:34 +0200
 
