Remove .la files from install

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-sane-backends (1.0.27-1~experimental2) UNRELEASED; urgency=medium
+sane-backends (1.0.27-1~experimental2) experimental; urgency=medium
 
   * debian/rules:
     - Rename libsane.udev to libsane1.udev to get missing
@@ -20,8 +20,9 @@ sane-backends (1.0.27-1~experimental2) UNRELEASED; urgency=medium
     using dh compat 10.
   * Drop --parallel from dh because this is default when using
     dh compat 10.
+  * Remove .la files from install (Closes: #868307).
 
- -- Jörg Frings-Fürst <debian@jff-webhosting.net>  Sat, 15 Jul 2017 11:31:34 +0200
+ -- Jörg Frings-Fürst <debian@jff-webhosting.net>  Fri, 28 Jul 2017 13:53:30 +0200
 
 sane-backends (1.0.27-1~experimental1) experimental; urgency=medium
 
