--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+sane-backends (1.0.27-1~experimental3) UNRELEASED; urgency=medium
+
+  * debian/control:
+    + Drop outdated Recommends libsane-extras-dev to libsane-dev
+      binary package (Closes: #868265).
+    + Drop outdated texlive and texlive-latex-extra Build-Dependency.
+
+ -- Jörg Frings-Fürst <debian@jff-webhosting.net>  Wed, 02 Aug 2017 18:20:24 +0200
+
 sane-backends (1.0.27-1~experimental2) experimental; urgency=medium
 
   * debian/rules:
