--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,7 @@ sane-backends (1.0.27-1~experimental3) UNRELEASED; urgency=medium
     + Move rules from override_dh_install-arch and override_dh_auto_install-arch
       to override_dh_install-indep and override_dh_auto_install-indep
       to build the arch all packages without error (CLoses: #870455).
+  * Move libsane-common.install.in to libsane-common.install.
 
  -- Jörg Frings-Fürst <debian@jff-webhosting.net>  Wed, 02 Aug 2017 18:20:24 +0200
 
