--- a/debian/changelog
+++ b/debian/changelog
@@ -25,6 +25,8 @@ sane-backends (1.0.27-1~experimental3) experimental; urgency=medium
   * libsane1.README.Debian:
     - Remove references to the libsane-extras package.
   * Correct typos in the previous changelog entry.
+  * Declare compliance with Debian Policy 4.1.1 (No changes needed).
+  * Move rm_conffile from libsane-common.preinst to libsane-common.maintscript.
 
  -- Jörg Frings-Fürst <debian@jff-webhosting.net>  Thu, 17 Aug 2017 16:10:44 +0200
 
