--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,9 @@
 sane-backends (1.0.27-1~experimental4) UNRELEASED; urgency=medium
 
   * Change to my new email address.
+  * debian/rules:
+    - Add override_dh_autoreconf to prevend delete of libtool.m4
+      (Closes: #887032).
 
  -- Jörg Frings-Fürst <debian@jff.email>  Sun, 12 Nov 2017 13:59:10 +0100
 
