--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,9 @@ sane-backends (1.0.27-1~experimental4) UNRELEASED; urgency=medium
   * debian/rules:
     - Add override_dh_autoreconf to prevend delete of libtool.m4
       (Closes: #887032).
+  * Migrate to debhelper 11:
+    - Change debian/compat to 11.
+    - Bump minimum debhelper version in debian/control to >= 11.
 
  -- Jörg Frings-Fürst <debian@jff.email>  Sun, 12 Nov 2017 13:59:10 +0100
 
