Declare compliance with Debian Policy 4.1.3

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ sane-backends (1.0.27-1~experimental4) UNRELEASED; urgency=medium
   * Migrate to debhelper 11:
     - Change debian/compat to 11.
     - Bump minimum debhelper version in debian/control to >= 11.
+  * Declare compliance with Debian Policy 4.1.3 (No changes needed).
 
  -- Jörg Frings-Fürst <debian@jff.email>  Sun, 12 Nov 2017 13:59:10 +0100
 
