--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,8 @@ sane-backends (1.0.27-1~experimental4) UNRELEASED; urgency=medium
   * debian/rules:
     - Add override_dh_autoreconf to prevend delete of libtool.m4
       (Closes: #887032).
+  * debian/copyright:
+    - Use secure copyright format URI.
   * Migrate to debhelper 11:
     - Change debian/compat to 11.
     - Bump minimum debhelper version in debian/control to >= 11.
